--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <div class="ayyy">
   <div class="intro">
-  <h1>Shreyas Moudgalya</h1>
+  <h1>Undergraduate Analytics</h1>
   <div class="details">
   <div class="one">
     <ul>
@@ -19,7 +19,7 @@
   <div class="two">
   <h2>Feb 17</h2>
   <p>
- <a href="A1C.html"> A1C vs BMI Plots </a>
+ <a href="A1C.html"> A1C vs Income Plots </a>
   </p>
    
 
@@ -27,6 +27,15 @@
   <h2>Feb 25</h2>
   <p>
   <a href="filteredType1and2.html">Diabetes Type 1 and Type 2 Pie Plot and Data Filtering </a>
+  </p>
+  
+  <h2>Feb 26</h2>
+  <p>
+  <a href="GlucoseRegression.html">Glucose vs Income Plots </a>
+  <br>
+  <a href="bmiRegression.html">BMI vs Income Plots </a>
+  <br>
+  <a href="filteredRetinopathy.html">Retinopathy Plots and Data Filtering  </a>
   </p>
   
 <!--  
