--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   <a href="filteredRetinopathy.html">Retinopathy Plots and Data Filtering  </a>
   </p>
   
+  
+  <h2>Feb 25</h2>
+  <p>
+  <a href="RIndexDR.html">Left Eye and Right Eye Refractive Index vs Diabetes (Incomeplete) </a>
+  </p>
+  
+  
 <!--  
 
 <h2>Week 3 - Oct 17</h2>
