--- a/index.html
+++ b/index.html
@@ -19,46 +19,35 @@
   <div class="two">
   <h2>Feb 17</h2>
   <p>
- <a href="A1C.html"> A1C vs Income Plots </a>
+ <a href="A1C.html"> A1C vs Income Plots (Shreyas)</a>
   </p>
    
 
  
   <h2>Feb 25</h2>
   <p>
-  <a href="filteredType1and2.html">Diabetes Type 1 and Type 2 Pie Plot and Data Filtering </a>
+  <a href="filteredType1and2.html">Diabetes Type 1 and Type 2 Pie Plot and Data Filtering (Shreyas)</a>
   </p>
   
   <h2>Feb 26</h2>
   <p>
-  <a href="GlucoseRegression.html">Glucose vs Income Plots </a>
+  <a href="GlucoseRegression.html">Glucose vs Income Plots (Jack)</a>
   <br>
-  <a href="bmiRegression.html">BMI vs Income Plots </a>
+  <a href="bmiRegression.html">BMI vs Income Plots (Jack)</a>
   <br>
-  <a href="filteredRetinopathy.html">Retinopathy Plots and Data Filtering  </a>
+  <a href="filteredRetinopathy.html">Retinopathy Plots and Data Filtering  (Marissa)</a>
   </p>
   
   
   <h2>Feb 25</h2>
   <p>
-  <a href="RIndexDR.html">Left Eye and Right Eye Refractive Index vs Diabetes (Incomeplete) </a>
+  <a href="RIndexDR.html">Left Eye and Right Eye Refractive Index vs Diabetes (Shreyas - Incomplete) </a>
   </p>
   
   
-<!--  
-
-<h2>Week 3 - Oct 17</h2>
+  <h2>March 16</h2>
   <p>
+  <a href="AssigningStuff.html">Assigning Values to Data Sets for Bayes (Shreyas - Incomeplete) </a>
   </p>
-
-<h2>Week 4 - Oct 24</h2>
-  <p>
-  </p>
-
-<h2>Week 5 - Oct 31</h2>
-  <p>
-  </p>
-   -->
-  
-  
+      
 </html>
