--- a/index.html
+++ b/index.html
@@ -50,4 +50,9 @@
   <a href="AssigningStuff.html">Assigning Values to Data Sets for Bayes (Shreyas - Incomeplete) </a>
   </p>
       
+
+<h2>March 30</h2>
+  <p>
+  <a href="DictFunction.html">Cleaning Data using Dict Function(Shreyas) </a>
+  </p>
 </html>
