--- a/index.html
+++ b/index.html
@@ -55,4 +55,14 @@
   <p>
   <a href="DictFunction.html">Cleaning Data using Dict Function(Shreyas) </a>
   </p>
+  
+  <h2>Arpil 4</h2>
+  <p>
+  <a href="Clean.html">Cleaning Null Data (Shreyas) </a>
+  </p>
+  
+  <h2>April 4</h2>
+  <p>
+  <a href="EditedBaseFile.html">Classifiers? (Shreyas) </a>
+  </p>
 </html>
