--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
   
   <h2>April 4</h2>
   <p>
-  <a href="EditedBaseFile.html">Classifiers? (Shreyas) </a>
+  <a href="EditedBaseFilee.html">Classifiers (Shreyas) </a>
+  </p>
+  
+  <h2>April 13</h2>
+  <p>
+  <a href="EditedBaseFile.html">Classifiers Updated (Shreyas) </a>
+  </p>
+  
+  <h2>April 13</h2>
+  <p>
+  <a href="EditedBaseFilewithAverage.html">Classifiers Average Values (Shreyas) </a>
   </p>
 </html>
