--- a/index.html
+++ b/index.html
@@ -80,4 +80,18 @@
   <p>
   <a href="MostRecentEditedBaseFile.html">Decision Tree(Shreyas) </a>
   </p>
+  
+  <h2>April 22</h2>
+  <p>
+  <a href="CorrectedRecent.html">Corrected Decision Tree(Shreyas) </a>
+  </p>
+  
+  <h2>April 22</h2>
+  <p>
+  <a href="CorrectedRecentAvg.html">Corrected Average Data Values Decision Tree(Shreyas) </a>
+  </p>
+  
+  <p>
+  <a href="oldDT.pdf">Decision Tree Pdf(Shreyas) </a>
+  </p>
 </html>
