--- a/index.html
+++ b/index.html
@@ -86,12 +86,15 @@
   <a href="CorrectedRecent.html">Corrected Decision Tree(Shreyas) </a>
   </p>
   
-  <h2>April 22</h2>
-  <p>
-  <a href="CorrectedRecentAvg.html">Corrected Average Data Values Decision Tree(Shreyas) </a>
-  </p>
-  
   <p>
   <a href="oldDT.pdf">Decision Tree Pdf(Shreyas) </a>
+  </p>
+  
+  <h2>April 23</h2>
+  <p>
+  <a href="CorrectAvgBaseFile.html">Corrected Random Data Values Decision Tree(Shreyas) </a>
+  </p>
+  <p>
+  <a href="randomDT.pdf">Decision Tree Random Data Pdf(Shreyas) </a>
   </p>
 </html>
