--- a/index.html
+++ b/index.html
@@ -97,4 +97,12 @@
   <p>
   <a href="randomDT.pdf">Decision Tree Random Data Pdf(Shreyas) </a>
   </p>
+  
+  <h2>April 26</h2>
+  <p>
+  <a href="final.html">Final Stuff(Shreyas) </a>
+  </p>
+  <p>
+  <a href="iris.pdf">Final DTree(Shreyas) </a>
+  </p>
 </html>
